--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# IDE user config
+.vscode/
+.idea/
+.vs/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+/**/.DS_Store
+/**/node_modules/
+/**/.env
+# /**/dist
+docs/**/dist
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Logs
+/**/yarn-error.log
+/**/npm-debug.log
+/**/lerna-debug.log
+/**/.pnpm-debug.log
