feat: met-hint 富文本编辑器智能提示项目demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    // "allowJs": true,
+    "allowJs": true,
     // "paths": {
     //     "@/*": ["src/*"]
     // },
